# ton-connect-bridge-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
config/: default.yml
docs/: README.md
load-tests/: README.md  docker-compose.loadtest.yml  local-clients.js
src/: config.rs  handlers.rs  lib.rs  main.rs  message_courier.rs  metrics.rs  mocks.rs  models.rs  server.rs  storage.rs
src/handlers/: message_handler.rs  sse_handler.rs
tests/: e2e.rs
