[package]
name = "ton-connect-bridge-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
config = { version = "0.14", default-features = false, features = ["convert_case", "yaml"]}
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25.4", features = [
    "tokio-comp",
    "connection-manager",
    "tokio-native-tls-comp",
] }
bb8 = "0.8.5"
bb8-redis = "0.15.0"
tower-http = { version = "0.5.2", features = ["trace"] }
base64 = "0.22"
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16" }

[dev-dependencies]
eventsource-stream = "0.2.3"
testcontainers-modules = { version = "0.9.0", features = ["redis"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
axum-test = { version = "15.3" }
mockall = "0.13.0"
tower = { version = "0.4", features = ["util"] }
